# forms

./: .env.example  .gitignore  docker-compose.dev.yaml  docker-compose.prod.yaml  postgres.docker-compose.yaml.example  pyproject.toml  requirements.txt
app/backend/: Dockerfile  alembic.ini  alembic.ini.example  config.py  deps.py  generate_secret_key.py  init-database.sql.example  main.py  pyproject.toml
app/backend/alembic/: env.py
app/backend/alembic/versions/: 098b688ce009_add_middle_names_to_user.py  16ee168d8c2b_move_member_id_to_details_to_abstract_.py  3fc87ee80787_add_role_column_to_users_table.py  4b75a3fc1d3d_create_users_table.py  76e2b1ea1e75_add_names_to_user.py  8f8c237cdc2c_update_users_table_to_include_member_id_.py  e92a337c0653_add_is_deleted_to_user.py
app/backend/crud/: user.py  utils.py
app/backend/database/: database.py
app/backend/models/: audit.py  form.py  user.py
app/backend/routers/: auth.py  users.py
app/backend/routers/v1/: protected.py  users.py
app/backend/schemas/: user.py
app/backend/utils/: admin.py  auth.py  password.py  words.txt
app/frontend/: config.py  main.py  pyproject.toml
app/frontend/routers/v1/: pages.py
app/frontend/static/: dashboard.html  dashboard.js  index.html  script.js  style.css
nginx/: nginx.conf
